Print val loss in hours + update notebook + win gen tweaks

--- a/shifts.ipynb
+++ b/shifts.ipynb
@@ -72,7 +72,7 @@
         "# Create window generator\n",
         "window = WindowGenerator(\n",
         "    train_df, val_df, test_df,\n",
-        "    input_width=INPUT_WIDTH, label_width=LABEL_WIDTH, gap_width=GAP_WIDTH,\n",
+        "    INPUT_WIDTH, LABEL_WIDTH, GAP_WIDTH,\n",
         "    label_columns=['hours'])"
       ],
       "outputs": [],
@@ -154,7 +154,12 @@
         "print()\n",
         "print(\"Evaluating LSTM model.\")\n",
         "val_performance['LSTM'] = lstm_model.evaluate(window.val, verbose=VERBOSE_TRAINING)\n",
-        "performance['LSTM'] = lstm_model.evaluate(window.test, verbose=0)"
+        "performance['LSTM'] = lstm_model.evaluate(window.test, verbose=0)\n",
+        "\n",
+        "print()\n",
+        "print(\"Overall validation performance:\")\n",
+        "for model_name, (loss, mea) in val_performance.items():\n",
+        "    print(\"%s %.4f loss, %.4f mean abs error (%.4f hours)\" % ((model_name + \":\").ljust(17), loss, mea, mea * std['hours']) )"
       ],
       "outputs": [],
       "execution_count": null
