--- a/shifts.ipynb
+++ b/shifts.ipynb
@@ -118,14 +118,78 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Training dense model.\n"
+      "Training dense model.\n",
+      "Epoch 1/20\n",
+      "1935/1935 [==============================] - 50s 26ms/step - loss: 0.9821 - mean_absolute_error: 0.9170 - val_loss: 0.9220 - val_mean_absolute_error: 0.9026\n",
+      "Epoch 2/20\n",
+      "1935/1935 [==============================] - 55s 28ms/step - loss: 0.9740 - mean_absolute_error: 0.9152 - val_loss: 0.9177 - val_mean_absolute_error: 0.8984\n",
+      "Epoch 3/20\n",
+      "1935/1935 [==============================] - 52s 27ms/step - loss: 0.9724 - mean_absolute_error: 0.9141 - val_loss: 0.9168 - val_mean_absolute_error: 0.8972\n",
+      "Epoch 4/20\n",
+      "1935/1935 [==============================] - 56s 29ms/step - loss: 0.9719 - mean_absolute_error: 0.9135 - val_loss: 0.9176 - val_mean_absolute_error: 0.8982\n",
+      "Epoch 5/20\n",
+      "1935/1935 [==============================] - 52s 27ms/step - loss: 0.9718 - mean_absolute_error: 0.9133 - val_loss: 0.9165 - val_mean_absolute_error: 0.8963\n",
+      "Epoch 6/20\n",
+      "1935/1935 [==============================] - 52s 27ms/step - loss: 0.9714 - mean_absolute_error: 0.9129 - val_loss: 0.9161 - val_mean_absolute_error: 0.8952\n",
+      "Epoch 7/20\n",
+      "1935/1935 [==============================] - 52s 27ms/step - loss: 0.9707 - mean_absolute_error: 0.9125 - val_loss: 0.9159 - val_mean_absolute_error: 0.8950\n",
+      "Epoch 8/20\n",
+      "1935/1935 [==============================] - 53s 27ms/step - loss: 0.9705 - mean_absolute_error: 0.9123 - val_loss: 0.9157 - val_mean_absolute_error: 0.8944\n",
+      "Epoch 9/20\n",
+      "1935/1935 [==============================] - 53s 27ms/step - loss: 0.9704 - mean_absolute_error: 0.9122 - val_loss: 0.9155 - val_mean_absolute_error: 0.8939\n",
+      "Epoch 10/20\n",
+      "1935/1935 [==============================] - 53s 28ms/step - loss: 0.9701 - mean_absolute_error: 0.9119 - val_loss: 0.9153 - val_mean_absolute_error: 0.8935\n",
+      "Epoch 11/20\n",
+      "1935/1935 [==============================] - 53s 27ms/step - loss: 0.9699 - mean_absolute_error: 0.9117 - val_loss: 0.9153 - val_mean_absolute_error: 0.8933\n",
+      "Epoch 12/20\n",
+      "1935/1935 [==============================] - 52s 27ms/step - loss: 0.9698 - mean_absolute_error: 0.9116 - val_loss: 0.9153 - val_mean_absolute_error: 0.8928\n",
+      "Epoch 13/20\n",
+      "1935/1935 [==============================] - 54s 28ms/step - loss: 0.9697 - mean_absolute_error: 0.9114 - val_loss: 0.9171 - val_mean_absolute_error: 0.8973\n",
+      "Epoch 14/20\n",
+      "1935/1935 [==============================] - 53s 27ms/step - loss: 0.9709 - mean_absolute_error: 0.9126 - val_loss: 0.9153 - val_mean_absolute_error: 0.8935\n",
+      "Epoch 15/20\n",
+      "1935/1935 [==============================] - 57s 30ms/step - loss: 0.9698 - mean_absolute_error: 0.9113 - val_loss: 0.9151 - val_mean_absolute_error: 0.8930\n",
+      "Epoch 16/20\n",
+      "1935/1935 [==============================] - 53s 28ms/step - loss: 0.9697 - mean_absolute_error: 0.9111 - val_loss: 0.9149 - val_mean_absolute_error: 0.8927\n",
+      "Epoch 17/20\n",
+      "1935/1935 [==============================] - 53s 28ms/step - loss: 0.9695 - mean_absolute_error: 0.9108 - val_loss: 0.9148 - val_mean_absolute_error: 0.8925\n",
+      "Epoch 18/20\n",
+      "1935/1935 [==============================] - 54s 28ms/step - loss: 0.9693 - mean_absolute_error: 0.9106 - val_loss: 0.9146 - val_mean_absolute_error: 0.8922\n",
+      "Epoch 19/20\n",
+      "1935/1935 [==============================] - 56s 29ms/step - loss: 0.9692 - mean_absolute_error: 0.9104 - val_loss: 0.9144 - val_mean_absolute_error: 0.8919\n",
+      "Epoch 20/20\n",
+      "1935/1935 [==============================] - 55s 29ms/step - loss: 0.9689 - mean_absolute_error: 0.9102 - val_loss: 0.9142 - val_mean_absolute_error: 0.8916\n",
+      "\n",
+      "Training LSTM model.\n",
+      "Epoch 1/20\n",
+      "1935/1935 [==============================] - 63s 32ms/step - loss: 0.8649 - mean_absolute_error: 0.8213 - val_loss: 0.8228 - val_mean_absolute_error: 0.8164\n",
+      "Epoch 2/20\n",
+      "1935/1935 [==============================] - 60s 31ms/step - loss: 0.8157 - mean_absolute_error: 0.7768 - val_loss: 0.8169 - val_mean_absolute_error: 0.8095\n",
+      "Epoch 3/20\n",
+      "1935/1935 [==============================] - 60s 31ms/step - loss: 0.8069 - mean_absolute_error: 0.7699 - val_loss: 0.8090 - val_mean_absolute_error: 0.8036\n",
+      "Epoch 4/20\n",
+      "1935/1935 [==============================] - 61s 31ms/step - loss: 0.7971 - mean_absolute_error: 0.7614 - val_loss: 0.7986 - val_mean_absolute_error: 0.7932\n",
+      "Epoch 5/20\n",
+      "1935/1935 [==============================] - 61s 31ms/step - loss: 0.7903 - mean_absolute_error: 0.7542 - val_loss: 0.7949 - val_mean_absolute_error: 0.7888\n",
+      "Epoch 6/20\n",
+      "1935/1935 [==============================] - 62s 32ms/step - loss: 0.7870 - mean_absolute_error: 0.7507 - val_loss: 0.7933 - val_mean_absolute_error: 0.7862\n",
+      "Epoch 7/20\n",
+      "1935/1935 [==============================] - 62s 32ms/step - loss: 0.7848 - mean_absolute_error: 0.7486 - val_loss: 0.7923 - val_mean_absolute_error: 0.7843\n",
+      "Epoch 8/20\n",
+      "1935/1935 [==============================] - 62s 32ms/step - loss: 0.7829 - mean_absolute_error: 0.7472 - val_loss: 0.7915 - val_mean_absolute_error: 0.7825\n",
+      "Epoch 9/20\n",
+      "1935/1935 [==============================] - 61s 32ms/step - loss: 0.7814 - mean_absolute_error: 0.7460 - val_loss: 0.7907 - val_mean_absolute_error: 0.7807\n",
+      "Epoch 10/20\n",
+      "1935/1935 [==============================] - 62s 32ms/step - loss: 0.7800 - mean_absolute_error: 0.7449 - val_loss: 0.7900 - val_mean_absolute_error: 0.7790\n"
      ]
     }
    ],
