--- a/ProcessedFrameVisualization.ipynb
+++ b/ProcessedFrameVisualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -372,13 +372,222 @@
        "[2352 rows x 192 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0\n",
+      "t_0\n",
+      "t_1\n",
+      "t_2\n",
+      "t_3\n",
+      "t_4\n",
+      "t_5\n",
+      "t_6\n",
+      "t_7\n",
+      "t_8\n",
+      "t_9\n",
+      "t_10\n",
+      "t_11\n",
+      "t_12\n",
+      "t_13\n",
+      "t_14\n",
+      "t_15\n",
+      "t_16\n",
+      "t_17\n",
+      "t_18\n",
+      "t_19\n",
+      "t_20\n",
+      "t_21\n",
+      "t_22\n",
+      "t_23\n",
+      "t_24\n",
+      "t_25\n",
+      "t_26\n",
+      "t_27\n",
+      "t_28\n",
+      "t_29\n",
+      "t_30\n",
+      "t_31\n",
+      "t_32\n",
+      "t_33\n",
+      "t_34\n",
+      "t_35\n",
+      "t_36\n",
+      "t_37\n",
+      "t_38\n",
+      "t_39\n",
+      "t_40\n",
+      "t_41\n",
+      "t_42\n",
+      "t_43\n",
+      "t_44\n",
+      "t_45\n",
+      "t_46\n",
+      "t_47\n",
+      "t_48\n",
+      "t_49\n",
+      "t_50\n",
+      "t_51\n",
+      "t_52\n",
+      "t_53\n",
+      "t_54\n",
+      "t_55\n",
+      "t_56\n",
+      "t_57\n",
+      "t_58\n",
+      "t_59\n",
+      "t_60\n",
+      "t_61\n",
+      "t_62\n",
+      "t_63\n",
+      "t_64\n",
+      "t_65\n",
+      "t_66\n",
+      "t_67\n",
+      "t_68\n",
+      "t_69\n",
+      "t_70\n",
+      "t_71\n",
+      "t_72\n",
+      "t_73\n",
+      "t_74\n",
+      "t_75\n",
+      "t_76\n",
+      "t_77\n",
+      "t_78\n",
+      "t_79\n",
+      "t_80\n",
+      "t_81\n",
+      "t_82\n",
+      "t_83\n",
+      "t_84\n",
+      "t_85\n",
+      "t_86\n",
+      "t_87\n",
+      "t_88\n",
+      "t_89\n",
+      "f_0\n",
+      "f_1\n",
+      "f_2\n",
+      "f_3\n",
+      "f_4\n",
+      "f_5\n",
+      "f_6\n",
+      "f_7\n",
+      "f_8\n",
+      "f_9\n",
+      "f_10\n",
+      "f_11\n",
+      "f_12\n",
+      "f_13\n",
+      "f_14\n",
+      "f_15\n",
+      "f_16\n",
+      "f_17\n",
+      "f_18\n",
+      "f_19\n",
+      "f_20\n",
+      "f_21\n",
+      "f_22\n",
+      "f_23\n",
+      "f_24\n",
+      "f_25\n",
+      "f_26\n",
+      "f_27\n",
+      "f_28\n",
+      "f_29\n",
+      "f_30\n",
+      "f_31\n",
+      "f_32\n",
+      "f_33\n",
+      "f_34\n",
+      "f_35\n",
+      "f_36\n",
+      "f_37\n",
+      "f_38\n",
+      "f_39\n",
+      "f_40\n",
+      "f_41\n",
+      "f_42\n",
+      "f_43\n",
+      "f_44\n",
+      "f_45\n",
+      "f_46\n",
+      "f_47\n",
+      "f_48\n",
+      "f_49\n",
+      "f_50\n",
+      "f_51\n",
+      "f_52\n",
+      "f_53\n",
+      "f_54\n",
+      "f_55\n",
+      "f_56\n",
+      "f_57\n",
+      "f_58\n",
+      "f_59\n",
+      "f_60\n",
+      "f_61\n",
+      "f_62\n",
+      "f_63\n",
+      "f_64\n",
+      "f_65\n",
+      "f_66\n",
+      "f_67\n",
+      "f_68\n",
+      "f_69\n",
+      "f_70\n",
+      "f_71\n",
+      "f_72\n",
+      "f_73\n",
+      "f_74\n",
+      "f_75\n",
+      "f_76\n",
+      "f_77\n",
+      "f_78\n",
+      "f_79\n",
+      "f_80\n",
+      "f_81\n",
+      "f_82\n",
+      "f_83\n",
+      "f_84\n",
+      "f_85\n",
+      "f_86\n",
+      "f_87\n",
+      "f_88\n",
+      "f_89\n",
+      "jobTitle\n",
+      "providerId\n",
+      "payType\n",
+      "dayOfWeek\n",
+      "Mon\n",
+      "Tue\n",
+      "Wed\n",
+      "Thu\n",
+      "Fri\n",
+      "Sat\n",
+      "Sun\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in df.columns:\n",
+    "    print(item)\n"
    ]
   },
   {
