--- a/ProcessedFrameVisualization.ipynb
+++ b/ProcessedFrameVisualization.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "frame = pd.read_csv(\"/users/facsupport/asharma/Data/Preprocessed/tmp/ONE.csv\")\n",
-    "frame = frame[frame['jobTitle'].isin([33,34,35,11,12,3,5,16,17])]"
+    "frame = frame[frame['jobTitle'].isin([33,34,35,11,12,3,5,16,17])]\n",
+    "frame = frame.drop(columns=['Unnamed: 0'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +38,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>t_0</th>\n",
        "      <th>t_1</th>\n",
        "      <th>t_2</th>\n",
@@ -47,6 +47,7 @@
        "      <th>t_6</th>\n",
        "      <th>t_7</th>\n",
        "      <th>t_8</th>\n",
+       "      <th>t_9</th>\n",
        "      <th>...</th>\n",
        "      <th>providerId</th>\n",
        "      <th>payType</th>\n",
@@ -63,7 +64,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>7.50</td>\n",
@@ -73,6 +73,7 @@
        "      <td>0.00</td>\n",
        "      <td>7.5</td>\n",
        "      <td>7.75</td>\n",
+       "      <td>7.50</td>\n",
        "      <td>...</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3.0</td>\n",
@@ -87,7 +88,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8.25</td>\n",
@@ -97,6 +97,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>8.25</td>\n",
        "      <td>...</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3.0</td>\n",
@@ -111,7 +112,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>6</td>\n",
        "      <td>0.0</td>\n",
        "      <td>8.3</td>\n",
        "      <td>10.53</td>\n",
@@ -120,6 +120,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>13.0</td>\n",
@@ -135,7 +136,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>7</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>7.71</td>\n",
@@ -145,6 +145,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
        "      <td>7.70</td>\n",
+       "      <td>7.78</td>\n",
        "      <td>...</td>\n",
        "      <td>13.0</td>\n",
        "      <td>3.0</td>\n",
@@ -159,7 +160,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>8</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
@@ -168,6 +168,7 @@
        "      <td>8.25</td>\n",
        "      <td>8.25</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>8.00</td>\n",
        "      <td>8.00</td>\n",
        "      <td>...</td>\n",
        "      <td>12.0</td>\n",
@@ -207,7 +208,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57880</th>\n",
-       "      <td>57880</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
@@ -216,6 +216,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>513.0</td>\n",
@@ -231,7 +232,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57883</th>\n",
-       "      <td>57883</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
@@ -240,6 +240,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>513.0</td>\n",
@@ -255,7 +256,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57886</th>\n",
-       "      <td>57886</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
@@ -264,6 +264,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>513.0</td>\n",
@@ -279,7 +280,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57887</th>\n",
-       "      <td>57887</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
@@ -288,6 +288,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>513.0</td>\n",
@@ -303,7 +304,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>57888</th>\n",
-       "      <td>57888</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.00</td>\n",
@@ -312,6 +312,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>513.0</td>\n",
@@ -327,22 +328,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>34318 rows × 192 columns</p>\n",
+       "<p>34318 rows × 191 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Unnamed: 0  t_0  t_1    t_2   t_3   t_4   t_5   t_6  t_7   t_8  ...  \\\n",
-       "4               4  0.0  0.0   7.50  7.75  7.75  0.00  0.00  7.5  7.75  ...   \n",
-       "5               5  0.0  0.0   8.25  8.25  0.00  0.00  0.00  0.0  0.00  ...   \n",
-       "6               6  0.0  8.3  10.53  9.14  0.00  0.00  0.00  0.0  0.00  ...   \n",
-       "7               7  0.0  0.0   7.71  7.63  7.65  7.85  0.00  0.0  7.70  ...   \n",
-       "8               8  0.0  0.0   0.00  8.25  8.25  8.25  8.25  0.0  8.00  ...   \n",
-       "...           ...  ...  ...    ...   ...   ...   ...   ...  ...   ...  ...   \n",
-       "57880       57880  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  ...   \n",
-       "57883       57883  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  ...   \n",
-       "57886       57886  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  ...   \n",
-       "57887       57887  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  ...   \n",
-       "57888       57888  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  ...   \n",
+       "       t_0  t_1    t_2   t_3   t_4   t_5   t_6  t_7   t_8   t_9  ...  \\\n",
+       "4      0.0  0.0   7.50  7.75  7.75  0.00  0.00  7.5  7.75  7.50  ...   \n",
+       "5      0.0  0.0   8.25  8.25  0.00  0.00  0.00  0.0  0.00  8.25  ...   \n",
+       "6      0.0  8.3  10.53  9.14  0.00  0.00  0.00  0.0  0.00  0.00  ...   \n",
+       "7      0.0  0.0   7.71  7.63  7.65  7.85  0.00  0.0  7.70  7.78  ...   \n",
+       "8      0.0  0.0   0.00  8.25  8.25  8.25  8.25  0.0  8.00  8.00  ...   \n",
+       "...    ...  ...    ...   ...   ...   ...   ...  ...   ...   ...  ...   \n",
+       "57880  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  ...   \n",
+       "57883  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  ...   \n",
+       "57886  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  ...   \n",
+       "57887  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  ...   \n",
+       "57888  0.0  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  ...   \n",
        "\n",
        "       providerId  payType  dayOfWeek       Mon       Tue       Wed       Thu  \\\n",
        "4             5.0      3.0        6.0  4.192308  4.711538  4.769231  5.384615   \n",
@@ -370,10 +371,10 @@
        "57887  1.793846  2.002500  1.990000  \n",
        "57888  3.924615  2.527500  1.836154  \n",
        "\n",
-       "[34318 rows x 192 columns]"
+       "[34318 rows x 191 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,14 +385,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unnamed: 0\n",
       "t_0\n",
       "t_1\n",
       "t_2\n",
