Update train_lgb files

--- a/train_lgb.ipynb
+++ b/train_lgb.ipynb
@@ -12,9 +12,15 @@
         "\n",
         "df = pd.read_csv(\"/users/facsupport/asharma/Data/Preprocessed/tmp/ONE.csv\")\n",
         "# Keep \"interesting\" jobs (TODO - use strings instead)\n",
-        "df = df[df['jobTitle'].isin([33,34,35,11,12,3,5,16,17])]\n",
-        "\n",
-        "#%%\n",
+        "df = df[df['jobTitle'].isin([33,34,35,11,12,3,5,16,17])]"
+      ],
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# ========================================\n",
         "#          SPLIT & PREP DATAFRAME\n",
         "# ========================================\n",
@@ -42,7 +48,16 @@
         "val_inputs, val_labels = inputs[split1:split2], labels[split1:split2]\n",
         "test_inputs, test_labels = inputs[split2:], labels[split2:]\n",
         "\n",
-        "#%%\n",
+        "print(train_inputs)\n",
+        "print(train_labels)"
+      ],
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# ========================================\n",
         "#          DATAFRAME TO LGB DS\n",
         "# ========================================\n",
@@ -52,8 +67,15 @@
         "train_data = lgb.Dataset(train_inputs, label=train_labels, categorical_feature=cats)\n",
         "val_data = lgb.Dataset(val_inputs, label=val_labels, categorical_feature=cats)\n",
         "test_data = lgb.Dataset(test_inputs, label=test_labels, categorical_feature=cats)\n",
-        "\n",
-        "#%%\n",
+        "print(train_data)"
+      ],
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# ========================================\n",
         "#            TRAIN WITH LGB\n",
         "# ========================================\n",
