--- a/train_lgb.ipynb
+++ b/train_lgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       t_0    t_1   t_2   t_3   t_4   t_5  t_6   t_7   t_8   t_9  ...  \\\n",
+      "4      0.0   7.50  7.75  7.75  0.00  0.00  7.5  7.75  7.50  7.75  ...   \n",
+      "5      0.0   8.25  8.25  0.00  0.00  0.00  0.0  0.00  8.25  8.25  ...   \n",
+      "6      8.3  10.53  9.14  0.00  0.00  0.00  0.0  0.00  0.00  0.00  ...   \n",
+      "7      0.0   7.71  7.63  7.65  7.85  0.00  0.0  7.70  7.78  5.35  ...   \n",
+      "8      0.0   0.00  8.25  8.25  8.25  8.25  0.0  8.00  8.00  0.00  ...   \n",
+      "...    ...    ...   ...   ...   ...   ...  ...   ...   ...   ...  ...   \n",
+      "45458  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  0.00  ...   \n",
+      "45459  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  0.00  ...   \n",
+      "45464  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  0.00  ...   \n",
+      "45474  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  0.00  ...   \n",
+      "45480  0.0   0.00  0.00  0.00  0.00  0.00  0.0  0.00  0.00  0.00  ...   \n",
+      "\n",
+      "       providerId  payType  dayOfWeek       Mon       Tue       Wed       Thu  \\\n",
+      "4             5.0      3.0        0.0  4.192308  4.711538  4.769231  5.384615   \n",
+      "5             5.0      3.0        0.0  2.403846  3.230769  3.211538  2.596154   \n",
+      "6            13.0      3.0        0.0  0.638462  0.810000  0.703077  0.000000   \n",
+      "7            13.0      3.0        0.0  4.657692  5.142308  3.936923  3.467692   \n",
+      "8            12.0      3.0        0.0  5.692308  5.000000  4.057692  3.461538   \n",
+      "...           ...      ...        ...       ...       ...       ...       ...   \n",
+      "45458       426.0      3.0        0.0  2.874615  2.847692  2.868462  2.901538   \n",
+      "45459       426.0      3.0        0.0  2.905385  3.344615  2.900000  2.746923   \n",
+      "45464       422.0      3.0        0.0  4.544615  4.384615  4.407692  5.788462   \n",
+      "45474       422.0      3.0        0.0  0.863077  0.884615  0.865385  0.861538   \n",
+      "45480       416.0      3.0        0.0  0.589231  0.000000  1.606154  1.149231   \n",
+      "\n",
+      "            Fri       Sat       Sun  \n",
+      "4      4.192308  4.269231  4.562500  \n",
+      "5      1.980769  1.923077  2.041667  \n",
+      "6      0.000000  0.000000  0.000000  \n",
+      "7      4.053846  2.881538  4.362500  \n",
+      "8      4.500000  4.403846  5.458333  \n",
+      "...         ...       ...       ...  \n",
+      "45458  2.401538  2.343846  2.515000  \n",
+      "45459  2.634615  3.076923  3.170000  \n",
+      "45464  4.730769  0.000000  0.000000  \n",
+      "45474  0.000000  0.000000  0.000000  \n",
+      "45480  1.202308  0.000000  0.000000  \n",
+      "\n",
+      "[25493 rows x 189 columns]\n",
+      "       t_89\n",
+      "4      0.00\n",
+      "5      8.25\n",
+      "6      0.00\n",
+      "7      0.00\n",
+      "8      0.00\n",
+      "...     ...\n",
+      "45458  0.00\n",
+      "45459  7.75\n",
+      "45464  0.00\n",
+      "45474  0.00\n",
+      "45480  0.00\n",
+      "\n",
+      "[25493 rows x 1 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# ========================================\n",
     "#          SPLIT & PREP DATAFRAME\n",
@@ -56,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<lightgbm.basic.Dataset object at 0x7f69fc447a90>\n"
+     ]
+    }
+   ],
    "source": [
     "# ========================================\n",
     "#          DATAFRAME TO LGB DS\n",
@@ -74,9 +143,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/users/facsupport/rtjoa/.pyenv/versions/3.8.6/envs/testproject/lib/python3.8/site-packages/lightgbm/basic.py:1702: UserWarning: Using categorical_feature in Dataset.\n",
+      "  _log_warning('Using categorical_feature in Dataset.')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LightGBM] [Warning] Auto-choosing col-wise multi-threading, the overhead of testing was 0.518371 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Total Bins 46282\n",
+      "[LightGBM] [Info] Number of data points in the train set: 25493, number of used features: 188\n",
+      "[LightGBM] [Info] Start training from score 3.026717\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/users/facsupport/rtjoa/.pyenv/versions/3.8.6/envs/testproject/lib/python3.8/site-packages/lightgbm/basic.py:1433: UserWarning: Overriding the parameters from Reference Dataset.\n",
+      "  _log_warning('Overriding the parameters from Reference Dataset.')\n",
+      "/users/facsupport/rtjoa/.pyenv/versions/3.8.6/envs/testproject/lib/python3.8/site-packages/lightgbm/basic.py:1245: UserWarning: categorical_column in param dict is overridden.\n",
+      "  _log_warning('{} in param dict is overridden.'.format(cat_alias))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\tvalid_0's l2: 18.5944\n",
+      "[2]\tvalid_0's l2: 16.7191\n",
+      "[3]\tvalid_0's l2: 15.1697\n",
+      "[4]\tvalid_0's l2: 13.8653\n",
+      "[5]\tvalid_0's l2: 12.7839\n",
+      "[6]\tvalid_0's l2: 11.9037\n",
+      "[7]\tvalid_0's l2: 11.1485\n",
+      "[8]\tvalid_0's l2: 10.5484\n",
+      "[9]\tvalid_0's l2: 10.029\n",
+      "[10]\tvalid_0's l2: 9.58806\n",
+      "[11]\tvalid_0's l2: 9.21984\n",
+      "[12]\tvalid_0's l2: 8.91716\n",
+      "[13]\tvalid_0's l2: 8.68426\n",
+      "[14]\tvalid_0's l2: 8.47358\n",
+      "[15]\tvalid_0's l2: 8.23474\n",
+      "[16]\tvalid_0's l2: 8.08451\n",
+      "[17]\tvalid_0's l2: 7.92775\n",
+      "[18]\tvalid_0's l2: 7.75844\n",
+      "[19]\tvalid_0's l2: 7.65878\n",
+      "[20]\tvalid_0's l2: 7.4702\n",
+      "[21]\tvalid_0's l2: 7.37716\n",
+      "[22]\tvalid_0's l2: 7.32795\n",
+      "[23]\tvalid_0's l2: 7.24396\n",
+      "[24]\tvalid_0's l2: 7.2005\n",
+      "[25]\tvalid_0's l2: 7.13293\n",
+      "[26]\tvalid_0's l2: 7.08494\n",
+      "[27]\tvalid_0's l2: 7.04942\n",
+      "[28]\tvalid_0's l2: 7.01523\n",
+      "[29]\tvalid_0's l2: 6.94072\n",
+      "[30]\tvalid_0's l2: 6.85554\n",
+      "[31]\tvalid_0's l2: 6.75212\n",
+      "[32]\tvalid_0's l2: 6.71912\n",
+      "[33]\tvalid_0's l2: 6.68536\n",
+      "[34]\tvalid_0's l2: 6.66022\n",
+      "[35]\tvalid_0's l2: 6.59226\n",
+      "[36]\tvalid_0's l2: 6.55809\n",
+      "[37]\tvalid_0's l2: 6.53253\n",
+      "[38]\tvalid_0's l2: 6.5127\n",
+      "[39]\tvalid_0's l2: 6.47971\n",
+      "[40]\tvalid_0's l2: 6.42951\n",
+      "[41]\tvalid_0's l2: 6.41247\n",
+      "[42]\tvalid_0's l2: 6.38148\n",
+      "[43]\tvalid_0's l2: 6.36071\n",
+      "[44]\tvalid_0's l2: 6.31611\n",
+      "[45]\tvalid_0's l2: 6.30021\n",
+      "[46]\tvalid_0's l2: 6.27873\n",
+      "[47]\tvalid_0's l2: 6.22602\n",
+      "[48]\tvalid_0's l2: 6.20389\n",
+      "[49]\tvalid_0's l2: 6.1581\n",
+      "[50]\tvalid_0's l2: 6.12604\n",
+      "[51]\tvalid_0's l2: 6.11317\n",
+      "[52]\tvalid_0's l2: 6.10127\n",
+      "[53]\tvalid_0's l2: 6.08413\n",
+      "[54]\tvalid_0's l2: 6.07052\n",
+      "[55]\tvalid_0's l2: 6.05117\n",
+      "[56]\tvalid_0's l2: 6.03635\n",
+      "[57]\tvalid_0's l2: 6.01598\n",
+      "[58]\tvalid_0's l2: 6.00234\n",
+      "[59]\tvalid_0's l2: 5.99598\n",
+      "[60]\tvalid_0's l2: 5.97856\n",
+      "[61]\tvalid_0's l2: 5.94249\n",
+      "[62]\tvalid_0's l2: 5.9041\n",
+      "[63]\tvalid_0's l2: 5.88764\n",
+      "[64]\tvalid_0's l2: 5.87209\n",
+      "[65]\tvalid_0's l2: 5.86169\n",
+      "[66]\tvalid_0's l2: 5.83946\n",
+      "[67]\tvalid_0's l2: 5.82681\n",
+      "[68]\tvalid_0's l2: 5.81924\n",
+      "[69]\tvalid_0's l2: 5.80201\n",
+      "[70]\tvalid_0's l2: 5.78969\n",
+      "[71]\tvalid_0's l2: 5.77379\n",
+      "[72]\tvalid_0's l2: 5.76024\n",
+      "[73]\tvalid_0's l2: 5.75494\n",
+      "[74]\tvalid_0's l2: 5.73591\n",
+      "[75]\tvalid_0's l2: 5.72911\n",
+      "[76]\tvalid_0's l2: 5.69077\n",
+      "[77]\tvalid_0's l2: 5.67902\n",
+      "[78]\tvalid_0's l2: 5.66077\n",
+      "[79]\tvalid_0's l2: 5.6497\n",
+      "[80]\tvalid_0's l2: 5.63362\n",
+      "[81]\tvalid_0's l2: 5.62486\n",
+      "[82]\tvalid_0's l2: 5.61209\n",
+      "[83]\tvalid_0's l2: 5.60101\n",
+      "[84]\tvalid_0's l2: 5.5879\n",
+      "[85]\tvalid_0's l2: 5.57681\n",
+      "[86]\tvalid_0's l2: 5.55758\n",
+      "[87]\tvalid_0's l2: 5.5446\n",
+      "[88]\tvalid_0's l2: 5.52918\n",
+      "[89]\tvalid_0's l2: 5.52176\n",
+      "[90]\tvalid_0's l2: 5.51132\n",
+      "[91]\tvalid_0's l2: 5.50643\n",
+      "[92]\tvalid_0's l2: 5.49028\n",
+      "[93]\tvalid_0's l2: 5.47825\n",
+      "[94]\tvalid_0's l2: 5.47169\n",
+      "[95]\tvalid_0's l2: 5.46167\n",
+      "[96]\tvalid_0's l2: 5.44587\n",
+      "[97]\tvalid_0's l2: 5.43954\n",
+      "[98]\tvalid_0's l2: 5.43302\n",
+      "[99]\tvalid_0's l2: 5.42652\n",
+      "[100]\tvalid_0's l2: 5.42074\n"
+     ]
+    }
+   ],
    "source": [
     "# ========================================\n",
     "#            TRAIN WITH LGB\n",
@@ -108,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
