--- a/notebooks/RNN.ipynb
+++ b/notebooks/RNN.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded Train and Validation Sets. Time taken: 430.9729857444763\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import time\n",
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,22 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(124893352, 40)\n",
-      "tf.Tensor(\n",
-      "[ 0.    0.    7.51  0.    7.29  6.92  0.    0.    7.58  7.14  8.91  7.51\n",
-      "  0.    7.34  7.43  0.    7.33  8.58  7.82  7.62  0.    0.    7.51  8.46\n",
-      "  0.    8.14  7.66  7.55  8.51 10.33  8.41  0.12  0.11  1.    0.    0.\n",
-      "  0.    0.    0.    0.  ], shape=(40,), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def expand_one_hot(labels,dataset):\n",
     "    outList = []\n",
@@ -186,20 +165,21 @@
    "source": [
     "import os\n",
     "checkpoint_dir = './training_checkpointsRNN'\n",
-    "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt_{epoch}\")\n",
+    "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt_{epoch+6}\")\n",
     "\n",
     "def decay(epoch):\n",
     "  if epoch < 3:\n",
-    "    return 1e-3\n",
-    "  elif epoch >= 3 and epoch < 7:\n",
     "    return 1e-4\n",
-    "  else:\n",
+    "  elif epoch >= 3 and epoch < 7:\n",
     "    return 1e-5\n",
+    "  else:\n",
+    "    return 1e-6\n",
     "\n",
     "callbacks = [\n",
     "    tf.keras.callbacks.ModelCheckpoint(filepath=checkpoint_prefix,save_weights_only=True),\n",
     "    tf.keras.callbacks.LearningRateScheduler(decay)\n",
-    "]\n"
+    "]\n",
+    "model.load_weights(tf.train.latest_checkpoint(checkpoint_dir))"
    ]
   },
   {
@@ -220,7 +200,11 @@
       "Epoch 4/10\n",
       "487865/487865 [==============================] - 19282s 40ms/step - loss: 9.0214 - mean_absolute_error: 2.0504 - val_loss: 9.9253 - val_mean_absolute_error: 2.2957\n",
       "Epoch 5/10\n",
-      "487864/487865 [============================>.] - ETA: 0s - loss: 8.9757 - mean_absolute_error: 2.0426"
+      "487865/487865 [==============================] - 20134s 41ms/step - loss: 8.9757 - mean_absolute_error: 2.0426 - val_loss: 9.9223 - val_mean_absolute_error: 2.3031\n",
+      "Epoch 6/10\n",
+      "487865/487865 [==============================] - 20464s 42ms/step - loss: 8.9614 - mean_absolute_error: 2.0402 - val_loss: 9.8518 - val_mean_absolute_error: 2.2751\n",
+      "Epoch 7/10\n",
+      "  1219/487865 [..............................] - ETA: 4:15:20 - loss: 8.4573 - mean_absolute_error: 2.0262"
      ]
     }
    ],
