--- a/notebooks/EfficientDenseNN.ipynb
+++ b/notebooks/EfficientDenseNN.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook Overview\n",
+    "\n",
+    "## Inputs\n",
+    "The input variables for all trials in this notebook are the following:\n",
+    "```py\n",
+    "include_fields = ['hours','day_of_week','hours_l1','hours_l2','hours_l3','hours_l4',\n",
+    "                  'hours_l5','hours_l6','hours_l7','hours_l8','hours_l14','hours_l15',\n",
+    "                  'hours_l21','hours_l22','hours_l28','hours_l29','week_perc0','week_perc6']\n",
+    "```\n",
+    "\n",
+    "## Models and Hyperparameters\n",
+    "There are 3 different feed forward neural networks(model, model2, model3) of varying width's (number of output units per layer) and depth's. All differences in hyperparameters are reflected in the call to\n",
+    "```py\n",
+    "model = tf.keras.Sequential([])\n",
+    "```\n",
+    "Currently, only the shape and depth of the models has been explored. Model3 (the simplest model) has acheived the best validation performance so far"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
