--- a/notebooks/RNN.ipynb
+++ b/notebooks/RNN.ipynb
@@ -1,10 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Notebook Overview\n",
+    "\n",
+    "## Inputs\n",
+    "The input variables for the RNN in this notebook are the following:\n",
+    "\n",
+    "    1. Time series data -- hours_l1, hours_l2, hours_l3, ..., hours_l30\n",
+    "    2. Additional predictors -- prov_id, day_of_week, week_perc0, week_perc6\n",
+    "\n",
+    "## Model Architecture\n",
+    "The architecture used in this notebook combines an RNN with a feed forward neural network. The RNN layer recieves all 30 days of lagged shift data and makes a prediction for the shift on the 31st day. This prediction is then concatenated with the additional predictors and fed into a traditional neural network to generate a better prediction--the idea being that the RNN (through it's long and short term memory) learns patterns over time and the FF network adjusts these patterns based on additional information. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Train and Validation Sets. Time taken: 421.74383902549744\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import time\n",
@@ -29,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(124893352, 40)\n",
+      "tf.Tensor(\n",
+      "[ 0.    0.    7.51  0.    7.29  6.92  0.    0.    7.58  7.14  8.91  7.51\n",
+      "  0.    7.34  7.43  0.    7.33  8.58  7.82  7.62  0.    0.    7.51  8.46\n",
+      "  0.    8.14  7.66  7.55  8.51 10.33  8.41  0.12  0.11  1.    0.    0.\n",
+      "  0.    0.    0.    0.  ], shape=(40,), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "def expand_one_hot(labels,dataset):\n",
     "    outList = []\n",
@@ -161,7 +198,18 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7f23c7bf9370>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "checkpoint_dir = './training_checkpointsRNN'\n",
@@ -184,27 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "487865/487865 [==============================] - 20407s 42ms/step - loss: 9.5664 - mean_absolute_error: 2.1566 - val_loss: 10.0772 - val_mean_absolute_error: 2.3264\n",
-      "Epoch 2/10\n",
-      "487865/487865 [==============================] - 20070s 41ms/step - loss: 9.0380 - mean_absolute_error: 2.0563 - val_loss: 10.1438 - val_mean_absolute_error: 2.3515\n",
-      "Epoch 3/10\n",
-      "487865/487865 [==============================] - 20058s 41ms/step - loss: 9.0262 - mean_absolute_error: 2.0548 - val_loss: 9.9914 - val_mean_absolute_error: 2.3360\n",
-      "Epoch 4/10\n",
-      "487865/487865 [==============================] - 19282s 40ms/step - loss: 9.0214 - mean_absolute_error: 2.0504 - val_loss: 9.9253 - val_mean_absolute_error: 2.2957\n",
-      "Epoch 5/10\n",
-      "487865/487865 [==============================] - 20134s 41ms/step - loss: 8.9757 - mean_absolute_error: 2.0426 - val_loss: 9.9223 - val_mean_absolute_error: 2.3031\n",
-      "Epoch 6/10\n",
-      "487865/487865 [==============================] - 20464s 42ms/step - loss: 8.9614 - mean_absolute_error: 2.0402 - val_loss: 9.8518 - val_mean_absolute_error: 2.2751\n",
-      "Epoch 7/10\n",
-      "  1219/487865 [..............................] - ETA: 4:15:20 - loss: 8.4573 - mean_absolute_error: 2.0262"
+     "ename": "NameError",
+     "evalue": "name 'trainSet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-ecd68d2f1aeb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrainSet\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalSet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'trainSet' is not defined"
      ]
     }
    ],
