--- a/notebooks/EfficientDenseNN.ipynb
+++ b/notebooks/EfficientDenseNN.ipynb
@@ -9,7 +9,7 @@
     "## Inputs\n",
     "The input variables for all trials in this notebook are the following:\n",
     "```py\n",
-    "include_fields = ['hours','day_of_week','hours_l1','hours_l2','hours_l3','hours_l4',\n",
+    "include_fields = ['day_of_week','hours_l1','hours_l2','hours_l3','hours_l4',\n",
     "                  'hours_l5','hours_l6','hours_l7','hours_l8','hours_l14','hours_l15',\n",
     "                  'hours_l21','hours_l22','hours_l28','hours_l29','week_perc0','week_perc6']\n",
     "```\n",
