--- a/notebooks/DeepNN_Hyperparameter_Tuning.ipynb
+++ b/notebooks/DeepNN_Hyperparameter_Tuning.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,25 @@
       "134236/134236 [==============================] - 167s 1ms/step - loss: 13.6291 - mean_absolute_error: 3.1153\n",
       "MAE: 3.1153430938720703    Time Taken: 1736.196836233139 seconds\n",
       "--- Starting trial: run-26\n",
-      "{'num_units': 8, 'dropout': 0.6, 'num_layers': 3}\n"
+      "{'num_units': 8, 'dropout': 0.6, 'num_layers': 3}\n",
+      "134236/134236 [==============================] - 165s 1ms/step - loss: 24.7308 - mean_absolute_error: 4.0767\n",
+      "MAE: 4.076712131500244    Time Taken: 1736.7362134456635 seconds\n",
+      "--- Starting trial: run-27\n",
+      "{'num_units': 16, 'dropout': 0.6, 'num_layers': 3}\n",
+      "134236/134236 [==============================] - 163s 1ms/step - loss: 20.3589 - mean_absolute_error: 3.7773\n",
+      "MAE: 3.777252197265625    Time Taken: 2777.105506181717 seconds\n",
+      "--- Starting trial: run-28\n",
+      "{'num_units': 24, 'dropout': 0.6, 'num_layers': 3}\n",
+      "134236/134236 [==============================] - 193s 1ms/step - loss: 15.9131 - mean_absolute_error: 3.5292\n",
+      "MAE: 3.529161214828491    Time Taken: 2302.0103282928467 seconds\n",
+      "--- Starting trial: run-29\n",
+      "{'num_units': 32, 'dropout': 0.6, 'num_layers': 3}\n",
+      "134236/134236 [==============================] - 187s 1ms/step - loss: 15.8703 - mean_absolute_error: 3.5686\n",
+      "MAE: 3.568563938140869    Time Taken: 6219.704747200012 seconds\n",
+      "--- Starting trial: run-30\n",
+      "{'num_units': 64, 'dropout': 0.6, 'num_layers': 3}\n",
+      "134236/134236 [==============================] - 186s 1ms/step - loss: 14.8386 - mean_absolute_error: 3.3602\n",
+      "MAE: 3.360211133956909    Time Taken: 1990.8162314891815 seconds\n"
      ]
     }
    ],
