--- a/notebooks/RNN_Tune.ipynb
+++ b/notebooks/RNN_Tune.ipynb
@@ -5,17 +5,17 @@
    "metadata": {},
    "source": [
     "# Notebook Overview\n",
-    "### Baseline model for RNN with embeddings\n",
+    "### Testing effect of recurrance length on prediction performance\n",
     "\n",
     "## Inputs\n",
-    "The input variables for the RNN in this notebook are the following:\n",
+    "The input variables for the RNN's in this notebook are the following:\n",
     "\n",
-    "    1. Time series data -- hours_l1, hours_l2, hours_l3, ..., hours_l14\n",
-    "    2. Additional predictors -- prov_id, day_of_week, avg_employees, perc_hours_today_before,\n",
+    "    1. Time series data -- Variable\n",
+    "    2. Additional predictors -- day_of_week, avg_employees, perc_hours_today_before,\n",
     "       perc_hours_yesterday_before, perc_hours_tomorrow_before\n",
     "\n",
     "## Model Architecture\n",
-    "The architecture used in this notebook combines an RNN with a feed forward neural network. The RNN layer recieves 14 days of lagged shift data and makes a prediction for the shift on the 15th day. This prediction is then concatenated with the additional predictors and fed into a traditional neural network to generate a better prediction--the idea being that the RNN (through it's long and short term memory) learns patterns over time and the FF network adjusts these patterns based on additional information. "
+    "The architecture used in this notebook combines an RNN with a feed forward neural network. The RNN layer recieves n days of lagged shift data and makes a prediction for the shift on the n+1th day. This prediction is then concatenated with the additional predictors and fed into a traditional neural network(various shapes, see log files for all tested archectures) to generate a better prediction--the idea being that the RNN (through it's long and short term memory) learns patterns over time and the FF network adjusts these patterns based on additional information. "
    ]
   },
   {
