Updated code for logging new columns

--- a/notebooks/RNN_Tune.ipynb
+++ b/notebooks/RNN_Tune.ipynb
@@ -136,19 +136,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "learning_rate = 1e-4\n",
     "# Callback function to decrease learning rate\n",
     "def decay(epoch):\n",
     "  if epoch < 3:\n",
-    "    return 1e-4\n",
+    "    return learning_rate\n",
     "  elif epoch >= 3 and epoch < 7:\n",
-    "    return 1e-5\n",
+    "    return learning_rate/10\n",
     "  else:\n",
-    "    return 1e-6\n",
+    "    return learning_rate/100\n",
     "\n",
     "# base dict of values to log for each run. Some values are common to every run\n",
-    "base_dict = {'Recurrance length':-1,'FF model shape':[16,8,1],'Metric':\"mse\",'Training loss':-1,'Val loss':-1,\n",
+    "base_dict = {'Recurrance length':-1,'LSTM Units':32,'Embedding Dimension':\"n/a\",'FF model shape':[16,8,1],'Initial Learning Rate':learning_rate,'Metric':\"mse\",'Training loss':-1,'Val loss':-1,\n",
     "             'time_start':-1,'time_duration':-1,'Epochs':10,'Columns':['day_of_week','avg_employees','perc_hours_today_before',\n",
-    "             'perc_hours_yesterday_before', 'perc_hours_tomorrow_before'],'user':\"asharma\"}\n",
+    "             'perc_hours_yesterday_before', 'perc_hours_tomorrow_before'],'LSTM type':\"Unconditioned\",'user':\"asharma\"}\n",
     "\n",
     "# Worker function for multiprocessing Process. Trains an RNN with the specified recurrance length\n",
     "def train_and_test_models(recurrance_length,garb):\n",
