--- a/notebooks/RNN_Tune.ipynb
+++ b/notebooks/RNN_Tune.ipynb
@@ -15,12 +15,14 @@
     "       perc_hours_yesterday_before, perc_hours_tomorrow_before\n",
     "\n",
     "## Model Architecture\n",
-    "The architecture used in this notebook combines an RNN with a feed forward neural network. The RNN layer recieves n days of lagged shift data and makes a prediction for the shift on the n+1th day. This prediction is then concatenated with the additional predictors and fed into a traditional neural network(various shapes, see log files for all tested archectures) to generate a better prediction--the idea being that the RNN (through it's long and short term memory) learns patterns over time and the FF network adjusts these patterns based on additional information. "
+    "The architecture used in this notebook combines an RNN with a feed forward neural network. The RNN layer recieves n days of lagged shift data and makes a prediction for the shift on the n+1th day. This prediction is then concatenated with the additional predictors and fed into a traditional neural network(various shapes, see log files for all tested archectures) to generate a better prediction--the idea being that the RNN (through it's long and short term memory) learns patterns over time and the FF network adjusts these patterns based on additional information. \n",
+    "\n",
+    "![Unconditioned RNN](Images/Unconditioned_RNN_Diagram.jpeg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 1e-4\n",
+    "learning_rate = 1e-3\n",
     "# Callback function to decrease learning rate\n",
     "def decay(epoch):\n",
     "  if epoch < 3:\n",
@@ -147,7 +149,7 @@
     "    return learning_rate/100\n",
     "\n",
     "# base dict of values to log for each run. Some values are common to every run\n",
-    "base_dict = {'Recurrance length':-1,'LSTM Units':32,'Embedding Dimension':\"n/a\",'FF model shape':[16,8,1],'Initial Learning Rate':learning_rate,'Metric':\"mse\",'Training loss':-1,'Val loss':-1,\n",
+    "base_dict = {'Recurrance length':-1,'LSTM Units':32,'Embedding Dimension':0,'FF model shape':[16,8,1],'Initial Learning Rate':learning_rate,'Regularization':\"Batch Normalization\",'Metric':\"mse\",'Training loss':-1,'Val loss':-1,\n",
     "             'time_start':-1,'time_duration':-1,'Epochs':10,'Columns':['day_of_week','avg_employees','perc_hours_today_before',\n",
     "             'perc_hours_yesterday_before', 'perc_hours_tomorrow_before'],'LSTM type':\"Unconditioned\",'user':\"asharma\"}\n",
     "\n",
