--- a/notebooks/RNN_Tune.ipynb
+++ b/notebooks/RNN_Tune.ipynb
@@ -19,8 +19,9 @@
     "\n",
     "\n",
     "\n",
-    "<img src=\"/RNN-shifts/notebooks/Images/Unconditioned_RNN_Diagram.jpeg\"\n" width="800" />
-   
+    "<img src=\"/RNN-shifts/notebooks/Images/Unconditioned_RNN_Diagram.jpeg\"\n",
+    "     alt=\"Unconditioned RNN\"\n",
+    "     style=\"float: left; margin-right: 10px;\" />"
    ]
   },
   {
