--- a/notebooks/RNN_Tune.ipynb
+++ b/notebooks/RNN_Tune.ipynb
@@ -18,7 +18,7 @@
     "The architecture used in this notebook combines an RNN with a feed forward neural network. The RNN layer recieves n days of lagged shift data and makes a prediction for the shift on the n+1th day. This prediction is then concatenated with the additional predictors and fed into a traditional neural network(various shapes, see log files for all tested archectures) to generate a better prediction--the idea being that the RNN (through it's long and short term memory) learns patterns over time and the FF network adjusts these patterns based on additional information. \n",
     "\n",
     "\n",
-    "\n",
+    "![RNN Diagram](Images/Unconditioned_RNN_Diagram.jpeg)\n",
     "<img src=\"Images/Unconditioned_RNN_Diagram.jpeg\" width=\"800\"/>"
    ]
   },
